tests/ok/module-enum.ari
mod Data {
  pub enum OptionI32 {
    None,
    Some(i32),
  }

  pub fn make(value: i32) -> OptionI32 {
    return Some(value);
  }
}

use Data::Some

fn score(value: Data::OptionI32) -> i64 {
  match value {
    Data::Some(inner) => {
      return inner as i64;
    }
    Data::None => {
      return 0;
    }
  }
}

fn main() -> i64 {
  return score(Data::make(4)) + score(Some(2));
}
