tests/errors/match-payload-required.ari
enum OptionI32 {
  None,
  Some(i32),
}

fn main() -> i64 {
  let value = Some(1);
  match value {
    Some => {
      return 1;
    }
    None => {
      return 0;
    }
  }
}
